--- a/nginx-conf/nginx.conf
+++ b/nginx-conf/nginx.conf
@@ -30,7 +30,7 @@ server {
                 try_files $uri @Nodejs;
         }
         location @Nodejs {
-                proxy_pass http://Nodejs:3000;
+                proxy_pass http://bc:3000;
                 add_header X-Frame-Options "SAMEORIGIN" always;
                 add_header X-XSS-Protection "1; mode=block" always;
                 add_header X-Content-Type-Options "nosniff" always;
